# pay-per-play-rps

./: PRD.md  architecture.md
backend/: .env.example  Cargo.toml  README.md
backend/migrations/: 001_initial.sql  002_add_rounds.sql  003_pvp.sql
backend/src/: app.rs  config.rs  error.rs  lib.rs  main.rs
backend/src/db/: games.rs  inventories.rs  matchmaking.rs  mod.rs  payments.rs  pvp_games.rs  pvp_payments.rs  pvp_settlements.rs  settlements.rs  users.rs
backend/src/domain/: fairness.rs  game.rs  inventory.rs  mod.rs  payer.rs  pvp_game.rs  pvp_settlement.rs  settlement.rs
backend/src/jobs/: mod.rs
backend/src/middleware/: request_id.rs
backend/src/routes/: fairness.rs  games.rs  health.rs  inventory.rs  leaderboard.rs  llms.rs  mod.rs  play.rs  pvp.rs  pvp_fairness.rs  receipts.rs
backend/src/types/: api.rs  domain.rs  mod.rs  pvp.rs  pvp_api.rs
backend/tests/: unit_tests.rs
