[package]
name = "pay-per-play-rps"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "rust_decimal",
    "migrate",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
rand = "0.9"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
tower = "0.5"
thiserror = "2"
rust_decimal = { version = "1", features = ["serde-with-str"] }
anyhow = "1"
dotenvy = "0.15"

mpp = { git = "https://github.com/tempoxyz/mpp-rs", features = [
    "server",
    "tempo",
    "axum",
] }

[patch.crates-io]
tempo-alloy = { git = "https://github.com/tempoxyz/tempo" }
tempo-primitives = { git = "https://github.com/tempoxyz/tempo" }
